<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/scan_qr_code"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_scan_qr_code" />

        <item
            android:id="@+id/nav_registered_events"
            android:icon="@drawable/baseline_event_24"
            android:title="@string/menu_registered_events" />

        <item
            android:id="@+id/nav_facility"
            android:icon="@drawable/baseline_holiday_village_24"
            android:title="@string/menu_facility" />

        <item
            android:id="@+id/nav_invitations"
            android:icon="@drawable/baseline_email_24"
            android:title="@string/menu_invitations" />

        <item
            android:id="@+id/entrantNotifications"
            android:icon="@drawable/white_notification"
            android:title="@string/menu_notifications" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_image"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_admin_browse_images" />

        <!--Both the id of the item here and the fragment in the mobile navigation should have the same name-->
        <item
            android:id="@+id/nav_browse_event"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_admin_browse_events" />

        <item
            android:id="@+id/adminBrowseProfilesFragment"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_admin_browse_profiles" />

        <item
            android:id="@+id/adminBrowseFacilitiesFragment"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_admin_browse_facilities" />
    </group>
</menu>