<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">



    <fragment
        android:id="@+id/entrantEventDetails"
        android:name="com.example.employ_events.ui.entrants.EntrantEventDetails"
        tools:layout="@layout/event_details">

        <action
            android:id="@+id/action_entrantEventDetails_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>


    <fragment
        android:id="@+id/nav_create_facility"
        android:name="com.example.employ_events.ui.facility.CreateFacilityFragment"
        tools:layout="@layout/create_facility">
    </fragment>



    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.employ_events.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_entrantEventDetails"
            app:destination="@id/entrantEventDetails" />
    </fragment>

    <fragment
        android:id="@+id/nav_facility"
        android:name="com.example.employ_events.ui.facility.FacilityFragment"
        android:label="@string/menu_facility"
        tools:layout="@layout/fragment_facility">
        <action
            android:id="@+id/action_facilityFragment_to_eventListFragment"
            app:destination="@id/eventListFragment" />
        <action
            android:id="@+id/action_nav_facility_to_nav_create_facility"
            app:destination="@id/nav_create_facility" />
        <action
            android:id="@+id/action_nav_facility_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.employ_events.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_edit_profile"
            app:destination="@id/nav_edit_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="com.example.employ_events.ui.profile.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile" >
        <action
            android:id="@+id/action_nav_edit_profile_to_nav_profile"
            app:destination="@id/nav_profile" />
    </fragment>
    <fragment
        android:id="@+id/nav_upload_image"
        android:name="com.example.employ_events.ui.profile.UploadImageFragment"
        android:label="Upload Image"
        tools:layout="@layout/upload_image" />

    <fragment
        android:id="@+id/addEventFragment"
        android:name="com.example.employ_events.ui.events.AddEventFragment"
        android:label="Add Event"
        tools:layout="@layout/add_event">

        <action
            android:id="@+id/action_addEventFragment_to_eventListFragment"
            app:destination="@id/eventListFragment" />
    </fragment>


    <fragment
        android:id="@+id/nav_list"
        android:name="com.example.employ_events.ui.registeredEvents.RegisteredEventsFragment"
        android:label="Registered Events"
        tools:layout="@layout/fragment_registered_events" />
    <fragment
        android:id="@+id/eventListFragment"
        android:name="com.example.employ_events.ui.events.EventListFragment"
        android:label="Event List"
        tools:layout="@layout/fragment_event_list">

        <!-- Action to navigate to AddEventFragment -->
        <action
            android:id="@+id/action_eventListFragment_to_addEventFragment"
            app:destination="@id/addEventFragment" />
    </fragment>




</navigation>
