<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light_background"
    android:padding="16dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp">

        <!-- Event Image -->
        <ImageView
            android:id="@+id/bannerImage"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:visibility="gone"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/event_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_menu_camera" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_card_background"
            android:elevation="4dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/uploadBannerButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/upload_banner" />

            <Button
                android:id="@+id/removeBannerButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/remove_banner"
                android:visibility="gone" /> <!-- Initially hidden -->
        </LinearLayout>


        <!-- White Card Container -->

        <!-- Save Event Button -->
        <Button
            android:id="@+id/save_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:text="Confirm Changes"
            android:textColor="@android:color/white"
            app:icon="@drawable/baseline_check_24" />

    </LinearLayout>
</ScrollView>
